--- a/chandler/.cvsignore
+++ b/chandler/.cvsignore
@@ -7,8 +7,9 @@ _chandler_app_.lock
 _chandler_app_.index.index_tmp
 _chandler_app_.index
 _chandler_app_
-_chandler_.tmp
-_chandler_.lock
-_chandler_.index
-_chandler_
+_CHANDLER_.tmp
+_CHANDLER_.lock
+_CHANDLER_.index
+_CHANDLER_
 Chandler-project.wpu
+*.pyc
