Set logHistory to TMAR
git-svn-id: http://svn.osafoundation.org/chandler/trunk@245 3c49585b-f0f7-0310-b5f9-dfe92a88fbfe

--- a/CVSROOT/config
+++ b/CVSROOT/config
@@ -12,3 +12,4 @@ LockDir=/var/lock/cvs
 # Set `LogHistory' to `all' or `TOFEWGCMAR' to log all transactions to the
 # history file, or a subset as needed (ie `TMAR' logs all write operations)
 #LogHistory=TOFEWGCMAR
+LogHistory=TMAR
