--- a/chandler/distrib/osx/bundle/Info.plist
+++ b/chandler/distrib/osx/bundle/Info.plist
@@ -11,7 +11,7 @@
 	<key>CFBundleGetInfoString</key>
 	<string>Chandler Snapshot 2003.05.04 from the Open Source Applications Foundation</string>
 	<key>CFBundleIconFile</key>
-	<string>chandler.icns</string>
+	<string>Chandler.icns</string>
 	<key>CFBundleInfoDictionaryVersion</key>
 	<string>6.0</string>
 	<key>CFBundleName</key>
