--- a/chandler/.cvsignore
+++ b/chandler/.cvsignore
@@ -1,15 +1,11 @@
-_repositorytest_.tmp
-_repositorytest_.lock
-_repositorytest_.index
-_repositorytest_
-_chandler_app_.tmp
-_chandler_app_.lock
-_chandler_app_.index.index_tmp
-_chandler_app_.index
-_chandler_app_
+_Repository_.tmp
+_Repository_.lock
+_Repository_.index
+_Repository_
 _CHANDLER_.tmp
 _CHANDLER_.lock
 _CHANDLER_.index
 _CHANDLER_
 Chandler-project.wpu
 *.pyc
+*.pyo
