--- a/chandler/.cvsignore
+++ b/chandler/.cvsignore
@@ -2,6 +2,10 @@ _Repository_.tmp
 _Repository_.lock
 _Repository_.index
 _Repository_
+_RepositoryTest_.tmp
+_RepositoryTest_.lock
+_RepositoryTest_.index
+_RepositoryTest_
 _CHANDLER_.tmp
 _CHANDLER_.lock
 _CHANDLER_.index
