Enabled the building of a debug version of our C launcher on linux, and it sets __debug__ and turns on asserts.
git-svn-id: http://svn.osafoundation.org/chandler/trunk@688 3c49585b-f0f7-0310-b5f9-dfe92a88fbfe

--- a/chandler/distrib/linux/launcher/Makefile
+++ b/chandler/distrib/linux/launcher/Makefile
@@ -9,10 +9,13 @@ srcdir=		../../../../python
 VERSION=	2.3
 
 # Compiler flags
-OPT=		-g
 INCLUDES=	-I$(srcdir)/Include -I$(blddir)
-CFLAGS=		$(OPT)
 CPPFLAGS=	$(INCLUDES)
+ifeq ($(DEBUG),1)
+    CFLAGS=		-g -DDEBUGMODE=1
+else
+    CFLAGS=		-O
+endif
 
 # The Python library
 LIBPYTHON=	$(blddir)/libpython$(VERSION).a
