- started reviving remote repository access    - reworked Repository.check() and found several schema errors    - hooked up stop button in repository viewer to run Repository.check()    - more on reviving remote repository access    - added readOnly feature to PersistentCollection    - added initialValue schema feature
git-svn-id: http://svn.osafoundation.org/chandler/trunk@1388 3c49585b-f0f7-0310-b5f9-dfe92a88fbfe

--- a/chandler/.cvsignore
+++ b/chandler/.cvsignore
@@ -1,16 +1,4 @@
-_Repository_.tmp
-_Repository_.lock
-_Repository_.index
-_Repository_
-_RepositoryTest_.tmp
-_RepositoryTest_.lock
-_RepositoryTest_.index
-_RepositoryTest_
-_CHANDLER_.tmp
-_CHANDLER_.lock
-_CHANDLER_.index
-_CHANDLER_
-__database__
+__repository__
 Chandler-project.wpu
 Chandler-project-debug.wpu
 *.pyc
