Repository sharing, reworked, back where it was just after 0.2 but quite a bit lslower due to using the same item access protocol as for local usage.
git-svn-id: http://svn.osafoundation.org/chandler/trunk@1429 3c49585b-f0f7-0310-b5f9-dfe92a88fbfe

--- a/chandler/.cvsignore
+++ b/chandler/.cvsignore
@@ -1,6 +1,4 @@
 __repository__
-Chandler-project.wpu
-Chandler-project-debug.wpu
-*.pyc
-*.pyo
-stdout.log
+Chandler-project.wpu Chandler-project-debug.wpu
+*.pyc *.pyo
+stdout.log chandler.log
