--- a/chandler/.cvsignore
+++ b/chandler/.cvsignore
@@ -1,4 +1,4 @@
 __repository__
 Chandler-project.wpu Chandler-project-debug.wpu
 *.pyc *.pyo
-stdout.log chandler.log
+stdout.log chandler.log agent.log
