Don't link to readline and termcap
git-svn-id: http://svn.osafoundation.org/chandler/trunk@1910 3c49585b-f0f7-0310-b5f9-dfe92a88fbfe

--- a/chandler/distrib/linux/launcher/Makefile
+++ b/chandler/distrib/linux/launcher/Makefile
@@ -15,7 +15,7 @@ CPPFLAGS=	$(INCLUDES)
 
 
 # XXX edit LIBS (in particular) to match Modules/Makefile
-LIBS=		-lnsl -ldl -lreadline -ltermcap -lieee -lpthread -lutil
+LIBS=		-lnsl -ldl -lieee -lpthread -lutil
 LDFLAGS=	-Xlinker -export-dynamic
 SYSLIBS=	-lm
 MODLIBS=	
