--- a/external/persistence/pathan/Makefile
+++ b/external/persistence/pathan/Makefile
@@ -37,6 +37,9 @@ build: $(SRC)/$(BUILD)/Makefile.defs
 	XERCESCROOT=$(XERCESC)/$(BUILD) $(MAKE); \
 	XERCESCROOT=$(XERCESC)/$(BUILD) $(MAKE) install
 
+expand: libpathan-$(VERSION)-2.tar.gz
+	tar xvzf libpathan-$(VERSION)-2.tar.gz
+
 snap: 
 	cd $(BUILD_ROOT); \
         tar -cvzf $(PATHAN)/$(SNAP).tar.gz $(SNAP)/lib/libpathan*
