added auto-downloading of sources.tar
git-svn-id: http://svn.osafoundation.org/chandler/trunk@2036 3c49585b-f0f7-0310-b5f9-dfe92a88fbfe

--- a/external/Makefile
+++ b/external/Makefile
@@ -46,9 +46,12 @@ default: all
 sources:
 	tar -cvf sources.tar $(SOURCES)
 
-expand:
+sources.tar:
+	curl http://builds.osafoundation.org/external/sources.tar > sources.tar
+
+expand: sources.tar
 	tar xvf sources.tar; \
-	@for system in $(SYSTEMS); \
+	for system in $(SYSTEMS); \
 	do \
 	    (cd $$system; $(MAKE) expand); \
 	done
