--- a/internal/PyLucene/Makefile
+++ b/internal/PyLucene/Makefile
@@ -29,8 +29,8 @@ build: apply
                                 DBVERSION=4.2.52 VERSION=$(VERSION) \
                                 all install
 
-expand: lucene-$(VERSION).tar.gz
-	tar xvzf lucene-$(VERSION).tar.gz
+expand: lucene-$(VERSION)-src.tar.gz
+	tar xvzf lucene-$(VERSION)-src.tar.gz
 
 snap: 
 	cd $(BUILD_ROOT); \
