--- a/external/epydoc/Makefile
+++ b/external/epydoc/Makefile
@@ -2,20 +2,33 @@
 VERSION=2.0
 EPYDOC=$(BUILD_ROOT)/epydoc
 SRC=$(EPYDOC)/epydoc-$(VERSION)
+OS=$(shell uname)
 
 ifeq ($(DEBUG),1)
 
 DIST_OPT=--debug
 PREFIX=$(BUILD_ROOT)/debug
 SNAP=debug
-PYTHON=$(PREFIX)/Library/Frameworks/Python.framework/Versions/2.3/bin/python_d
+PYTHON=python_d
 
 else
 
 DIST_OPT=
 PREFIX=$(BUILD_ROOT)/release
 SNAP=release
-PYTHON=$(PREFIX)/Library/Frameworks/Python.framework/Versions/2.3/bin/python
+PYTHON=python
+
+endif
+
+ifeq ($(OS),Darwin)
+
+PYTHON:=$(PREFIX)/Library/Frameworks/Python.framework/Versions/2.3/bin/$(PYTHON)
+SITE=Library/Frameworks/Python.framework/Versions/2.3/lib/python2.3/site-packages
+
+else
+
+PYTHON:=$(PREFIX)/bin/$(PYTHON)
+SITE=lib/python2.3/site-packages
 
 endif
 
@@ -35,7 +48,7 @@ expand: epydoc-$(VERSION).tar.gz
 snap: 
 	cd $(BUILD_ROOT); \
         tar -cvzf $(EPYDOC)/$(SNAP).tar.gz \
-                  $(SNAP)/Library/Frameworks/Python.framework/Versions/2.3/lib/python2.3/site-packages/epydoc
+                  $(SNAP)/$(SITE)/epydoc
 
 clean:
 	cd $(SRC); rm -rf $(BUILD)
