Added support for Linux
git-svn-id: http://svn.osafoundation.org/chandler/trunk@2041 3c49585b-f0f7-0310-b5f9-dfe92a88fbfe

--- a/external/egenix-mx/Makefile
+++ b/external/egenix-mx/Makefile
@@ -2,20 +2,33 @@
 VERSION=2.0.4
 EGENIX=$(BUILD_ROOT)/egenix-mx
 SRC=$(EGENIX)/egenix-mx-base-$(VERSION)
+OS=$(shell uname)
 
 ifeq ($(DEBUG),1)
 
 DIST_OPT=--debug
 PREFIX=$(BUILD_ROOT)/debug
 SNAP=debug
-PYTHON=$(PREFIX)/Library/Frameworks/Python.framework/Versions/2.3/bin/python_d
+PYTHON=python_d
 
 else
 
 DIST_OPT=
 PREFIX=$(BUILD_ROOT)/release
 SNAP=release
-PYTHON=$(PREFIX)/Library/Frameworks/Python.framework/Versions/2.3/bin/python
+PYTHON=python
+
+endif
+
+ifeq ($(OS),Darwin)
+
+PYTHON:=$(PREFIX)/Library/Frameworks/Python.framework/Versions/2.3/bin/$(PYTHON)
+SITE=Library/Frameworks/Python.framework/Versions/2.3/lib/python2.3/site-packages
+
+else
+
+PYTHON:=$(PREFIX)/bin/$(PYTHON)
+SITE=lib/python2.3/site-packages
 
 endif
 
@@ -38,7 +51,7 @@ expand: egenix-mx-base-$(VERSION).tar.gz
 snap: 
 	cd $(BUILD_ROOT); \
         tar -cvzf $(EGENIX)/$(SNAP).tar.gz \
-                  $(SNAP)/Library/Frameworks/Python.framework/Versions/2.3/lib/python2.3/site-packages/mx
+                  $(SNAP)/$(SITE)/mx
 
 clean:
 	cd $(SRC); rm -rf $(BUILD)
