--- a/external/persistence/libxml2/Makefile
+++ b/external/persistence/libxml2/Makefile
@@ -2,6 +2,7 @@
 VERSION=2.6.3
 LIBXML2=$(BUILD_ROOT)/persistence/libxml2
 SRC=$(LIBXML2)/libxml2-$(VERSION)
+OS=$(shell uname)
 
 ifeq ($(DEBUG),1)
 
@@ -9,7 +10,6 @@ CONF_DBG=--enable-debug
 DIST_DBG=--debug
 PREFIX=$(BUILD_ROOT)/debug
 SNAP=debug
-PYTHON=$(PREFIX)/Library/Frameworks/Python.framework/Versions/2.3/bin/python_d
 
 else
 
@@ -17,7 +17,18 @@ CONF_DBG=
 DIST_DBG=
 PREFIX=$(BUILD_ROOT)/release
 SNAP=release
-PYTHON=$(PREFIX)/Library/Frameworks/Python.framework/Versions/2.3/bin/python
+
+endif
+
+ifeq ($(OS),Darwin)
+
+PYTHON=$(PREFIX)/Library/Frameworks/Python.framework/Versions/Current
+SITE=Library/Frameworks/Python.framework/Versions/2.3/lib/python2.3/site-packages
+
+else
+
+PYTHON=$(PREFIX)
+SITE=lib/python2.3/site-packages
 
 endif
 
@@ -31,7 +42,7 @@ $(SRC)/$(BUILD)/Makefile: patches
 	cd $(SRC); mkdir -p $(BUILD); cd $(BUILD); \
 	../configure --prefix=$(PREFIX) \
                      --srcdir=$(SRC) \
-                     --with-python=$(PREFIX)/Library/Frameworks/Python.framework/Versions/Current \
+                     --with-python=$(PYTHON) \
                      $(CONF_DBG)
 
 build: $(SRC)/$(BUILD)/Makefile
@@ -44,7 +55,7 @@ snap:
 	cd $(BUILD_ROOT); \
         tar -cvzf $(LIBXML2)/$(SNAP).tar.gz \
                   $(SNAP)/lib/libxml2* \
-                  $(SNAP)/Library/Frameworks/Python.framework/Versions/2.3/lib/python2.3/site-packages/libxml2*
+                  $(SNAP)/$(SITE)/libxml2*
 
 clean:
 	cd $(SRC); rm -rf $(BUILD)
