--- a/external/persistence/libxslt/Makefile
+++ b/external/persistence/libxslt/Makefile
@@ -2,6 +2,7 @@
 VERSION=1.1.2
 LIBXSLT=$(BUILD_ROOT)/persistence/libxslt
 SRC=$(LIBXSLT)/libxslt-$(VERSION)
+OS=$(shell uname)
 
 ifeq ($(DEBUG),1)
 
@@ -9,7 +10,6 @@ CONF_DBG=--enable-debug
 DIST_DBG=--debug
 PREFIX=$(BUILD_ROOT)/debug
 SNAP=debug
-PYTHON=$(PREFIX)/Library/Frameworks/Python.framework/Versions/2.3/bin/python_d
 
 else
 
@@ -17,7 +17,18 @@ CONF_DBG=
 DIST_DBG=
 PREFIX=$(BUILD_ROOT)/release
 SNAP=release
-PYTHON=$(PREFIX)/Library/Frameworks/Python.framework/Versions/2.3/bin/python
+
+endif
+
+ifeq ($(OS),Darwin)
+
+PYTHON=$(PREFIX)/Library/Frameworks/Python.framework/Versions/Current
+SITE=Library/Frameworks/Python.framework/Versions/2.3/lib/python2.3/site-packages
+
+else
+
+PYTHON=$(PREFIX)
+SITE=lib/python2.3/site-packages
 
 endif
 
@@ -34,7 +45,7 @@ $(SRC)/$(BUILD)/Makefile: patches
                      --with-libxml-prefix=$(PREFIX) \
                      --with-libxml-include-prefix=$(PREFIX) \
                      --with-libxml-lib-prefix=$(PREFIX) \
-                     --with-python=$(PREFIX)/Library/Frameworks/Python.framework/Versions/Current \
+                     --with-python=$(PYTHON) \
                      $(CONF_DBG)
 
 build: $(SRC)/$(BUILD)/Makefile
@@ -47,7 +58,7 @@ snap:
 	cd $(BUILD_ROOT); \
         tar -cvzf $(LIBXSLT)/$(SNAP).tar.gz \
                   $(SNAP)/lib/libxslt* $(SNAP)/lib/libexslt* \
-                  $(SNAP)/Library/Frameworks/Python.framework/Versions/2.3/lib/python2.3/site-packages/libxslt*
+                  $(SNAP)/$(SITE)/libxslt*
 
 clean:
 	cd $(SRC); rm -rf $(BUILD)
