--- a/external/SOAPpy/Makefile
+++ b/external/SOAPpy/Makefile
@@ -2,20 +2,33 @@
 VERSION=0.10.2
 SOAPPY=$(BUILD_ROOT)/SOAPpy
 SRC=$(SOAPPY)/SOAPpy-$(VERSION)
+OS=$(shell uname)
 
 ifeq ($(DEBUG),1)
 
 DIST_OPT=--debug
 PREFIX=$(BUILD_ROOT)/debug
 SNAP=debug
-PYTHON=$(PREFIX)/Library/Frameworks/Python.framework/Versions/2.3/bin/python_d
+PYTHON=python_d
 
 else
 
 DIST_OPT=
 PREFIX=$(BUILD_ROOT)/release
 SNAP=release
-PYTHON=$(PREFIX)/Library/Frameworks/Python.framework/Versions/2.3/bin/python
+PYTHON=python
+
+endif
+
+ifeq ($(OS),Darwin)
+
+PYTHON:=$(PREFIX)/Library/Frameworks/Python.framework/Versions/2.3/bin/$(PYTHON)
+SITE=Library/Frameworks/Python.framework/Versions/2.3/lib/python2.3/site-packages
+
+else
+
+PYTHON:=$(PREFIX)/bin/$(PYTHON)
+SITE=lib/python2.3/site-packages
 
 endif
 
@@ -38,7 +51,7 @@ expand: SOAPpy-$(VERSION).tar.gz
 snap: 
 	cd $(BUILD_ROOT); \
         tar -cvzf $(SOAPPY)/$(SNAP).tar.gz \
-                  $(SNAP)/Library/Frameworks/Python.framework/Versions/2.3/lib/python2.3/site-packages/SOAPpy
+                  $(SNAP)/$(SITE)/SOAPpy
 
 clean:
 	cd $(SRC); rm -rf $(BUILD)
