--- a/external/pychecker/Makefile
+++ b/external/pychecker/Makefile
@@ -2,20 +2,36 @@
 VERSION=0.8.13
 PYCHECKER=$(BUILD_ROOT)/pychecker
 SRC=$(PYCHECKER)/pychecker-$(VERSION)
+OS=$(shell uname)
 
 ifeq ($(DEBUG),1)
 
 DIST_OPT=--debug
 PREFIX=$(BUILD_ROOT)/debug
 SNAP=debug
-PYTHON=$(PREFIX)/Library/Frameworks/Python.framework/Versions/2.3/bin/python_d
+PYTHON=python_d
 
 else
 
 DIST_OPT=
 PREFIX=$(BUILD_ROOT)/release
 SNAP=release
-PYTHON=$(PREFIX)/Library/Frameworks/Python.framework/Versions/2.3/bin/python
+PYTHON=python
+
+endif
+
+ifeq ($(OS),Darwin)
+
+PYTHON:=$(PREFIX)/Library/Frameworks/Python.framework/Versions/2.3/bin/$(PYTHON)
+FRAMEWORK=Library/Frameworks/Python.framework/Versions/2.3
+SITE=$(FRAMEWORK)/lib/python2.3/site-packages
+BIN=$(FRAMEWORK)/bin
+
+else
+
+PYTHON:=$(PREFIX)/bin/$(PYTHON)
+SITE=lib/python2.3/site-packages
+BIN=bin
 
 endif
 
@@ -35,8 +51,8 @@ expand: pychecker-$(VERSION).tar.gz
 snap: 
 	cd $(BUILD_ROOT); \
         tar -cvzf $(PYCHECKER)/$(SNAP).tar.gz \
-                  $(SNAP)/Library/Frameworks/Python.framework/Versions/2.3/lib/python2.3/site-packages/pychecker \
-                  $(SNAP)/Library/Frameworks/Python.framework/Versions/2.3/bin/pychecker
+                  $(SNAP)/$(SITE)/pychecker \
+                  $(SNAP)/$(BIN)/pychecker
 
 clean:
 	cd $(SRC); rm -rf $(BUILD)
