added bz2 for Linux
git-svn-id: http://svn.osafoundation.org/chandler/trunk@2044 3c49585b-f0f7-0310-b5f9-dfe92a88fbfe

--- a/external/Makefile
+++ b/external/Makefile
@@ -1,12 +1,8 @@
 
 ifeq ($(DEBUG),1)
-
 SNAP=debug
-
 else
-
 SNAP=release
-
 endif
 
 SYSTEMS=persistence/db \
@@ -27,6 +23,7 @@ SYSTEMS=persistence/db \
 
 SOURCES=persistence/db/db-4.2.52.tar.gz \
         python/Python-2.3.3.tgz \
+        python/bzip2-1.0.2.tar.gz \
         epydoc/epydoc-2.0.tar.gz \
         wx/wxpython.tar.gz \
         persistence/xerces-c/xerces-c-src2_4_0.tar.gz \
