added dynamic computing and setting of -F flag for non-standard installation location of Chandler's Python.framework
git-svn-id: http://svn.osafoundation.org/chandler/trunk@2051 3c49585b-f0f7-0310-b5f9-dfe92a88fbfe

--- a/external/python/Makefile
+++ b/external/python/Makefile
@@ -31,8 +31,7 @@ ifeq ($(OS),Darwin)
 $(SRC)/$(BUILD)/Makefile:
 	cd $(SRC); mkdir -p $(BUILD); cd $(BUILD); \
 	../configure --prefix=$(PREFIX) $(CONF_DBG) \
-                     --enable-framework=$(PREFIX)/Library/Frameworks \
-                     LDFLAGS=-F$(PREFIX)/Library/Frameworks
+                     --enable-framework=$(PREFIX)/Library/Frameworks
 
 build: apply
 	cd $(SRC)/$(BUILD); \
