also snap include/python so that extensions can be built with Chandler's python
git-svn-id: http://svn.osafoundation.org/chandler/trunk@2052 3c49585b-f0f7-0310-b5f9-dfe92a88fbfe

--- a/external/python/Makefile
+++ b/external/python/Makefile
@@ -66,7 +66,9 @@ build: bzip2-$(BZIP2VERSION)/libbz2.a apply
 snap: 
 	cd $(BUILD_ROOT); \
         tar -cvzf $(PYTHON)/$(SNAP).tar.gz \
-                  $(SNAP)/bin/idle $(SNAP)/bin/python* $(SNAP)/lib/python* \
+                  $(SNAP)/bin/idle $(SNAP)/bin/python* \
+                  $(SNAP)/lib/python* \
+                  $(SNAP)/include/python* \
             -X $(PYTHON)/xcludes
 
 expand: Python-$(VERSION).tgz
