upgraded egenix to 2.1.0 and patched it to work with python 2.3.3 debug
git-svn-id: http://svn.osafoundation.org/chandler/trunk@2053 3c49585b-f0f7-0310-b5f9-dfe92a88fbfe

--- a/external/python/Makefile
+++ b/external/python/Makefile
@@ -7,7 +7,7 @@ OS=$(shell uname)
 
 ifeq ($(DEBUG),1)
 
-CONF_DBG=--with-suffix=_d --with-pydebug
+CONF_DBG=--with-pydebug --with-suffix=_d
 COMP_OPT=OPT=-g
 PREFIX=$(BUILD_ROOT)/debug
 SNAP=debug
